syntax = "proto3";

package data_layer;

service DataLayer {
    // Provisions the data layer (PostgreSQL + Hasura)
    rpc Provision (ProvisionRequest) returns (ProvisionResponse);

    // Checks the provisioning status
    rpc CheckProvisioningStatus (CheckProvisioningStatusRequest) returns (ProvisionResponse);
}

message ProvisionRequest {
    string account_id = 1;
    string function_name = 2;
    string schema = 3;
}

message CheckProvisioningStatusRequest {
    string account_id = 1;
    string function_name = 2;
}

enum ProvisioningStatus {
    UNSPECIFIED = 0;
    PENDING = 1;
    COMPLETE = 2;
    FAILED = 3;
}

message ProvisionResponse {
    ProvisioningStatus status = 1;
}
